CHANGES IN VERSION 1.0.5
-----------------------

NEW FEATURES

    o Change functions ('xEnrichBarplot' and 'xEnrichCompare') caused by the major ggplot2 update (2.2.0)
    
    o Add function 'xColormap' for defining color palette (including those used by ggplot2)


CHANGES IN VERSION 1.0.4
-----------------------

NEW FEATURES

    o Add infrastructure functions ('xSNPlocations' and 'xSM2DF')

    o Populate annotations


CHANGES IN VERSION 1.0.3
-----------------------

NEW FEATURES

    o Fix bugs in the function 'xRDataLoader' for Windows users
    
    o Enable the choosing analysis resolution done by 'xGRviaGenomicAnno'
    
    
CHANGES IN VERSION 1.0.2
-----------------------

NEW FEATURES

    o Add new functions ('xEnrichConciser', 'xEnrichBarplot', 'xEnrichDAGplot', 'xEnrichCompare' and 'xEnrichDAGplotAdv') to visualise and compare enrichment analysis results
    
    o Add new functions ('xSocialiserDAGplot' and 'xSocialiserDAGplotAdv') to visualise and compare similarity analysis results
    
    o Add new functions ('xVisKernels', 'xSNPscores', 'xSNP2nGenes', 'xSparseMatrix' and 'xSNP2GeneScores') to control how to define and score seed genes from a list of GWAS SNPs
    
    o Add annotation functions ('xGRviaGeneAnno', 'xGRviaGenomicAnno' and 'xGRviaGenomicAnnoAdv') to interpret user-defined list of genomic regions either via looking at nearby gene annotations by ontologies or via looking at co-localised functional genomic annotations


CHANGES IN VERSION 1.0.0
-----------------------

NEW FEATURES

    o A new data interpretation system by comprehensively utilising ontology and network information to make a user-defined gene or SNP list more interpretable

    o Enrichment analysis using either built-in or custom ontologies

    o Similarity analysis for calculating semantic similarity between genes (or SNPs) based on their ontology annotation profiles
    